@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model

class Manager {
    section
}

class HumanResourcesManager {

}

class GreenSpacesManager {

}



class Agenda {
    plannedTasks
}


class Task {
    park
    taskType
    taskDescription
    priority
    status

}

class ToDoList{
    pendingTasks
}


class Vehicle {
    Brand
    Model
    Type
    Tare Weight
    Gross Weight
    Current Km
    Register Date
    Acquisition Date
    Maintenance Frequency
    Plate Number
    Passengers Number
    Doors Number
    Fuel Type
    Trailer Machines
}

Manager "1" -- "1" Agenda: manages >
Manager "1" -- "*" ToDoList: manages >
Manager "1" -- "*" Task: creates >
Manager "1" --up "1..*" HumanResourcesManager: is a >
Manager "1" --up "1..*" GreenSpacesManager: is a >
Manager "1" -- "*" Vehicle: manages >

Agenda "1" -- "*" ToDoList: gets tasks from >
Agenda "1" -- "*" Task: has >

Task "1..*" -- "1..*" ToDoList: has <

Vehicle "1..*" -- "1" Task: is attributed to >

@enduml